<resources>
    <string name="app_name">Convoy</string>
    <string name="firstname_text">First Name</string>
    <string name="lastname_text">Last Name</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Re-Type Password</string>
    <string name="login_text">Log In</string>
    <string name="register_text">Register</string>
    <string name="welcome_text">Welcome to Convoy!\nPlease log in or register.</string>
    <string name="password_error">Error: Passwords do not match.</string>
    <string name="network_error">Error: Request failed. Check your internet connection.</string>
    <string name="big_fuck_up">Error: The devs don\'t care.</string>
    <string name="blank_fields">Error: One or more fields left blank.</string>
    <string name="start_convoy">Start Convoy</string>
    <string name="end_convoy">End Convoy</string>
    <string name="join_convoy">Join Convoy</string>
    <string name="leave_convoy">Leave Convoy</string>
    <string name="join_message">Please type a valid Convoy ID</string>
    <string name="end_message">Are you sure you would like to end the convoy?</string>
    <string name="leave_message">Are you sure you would like to leave the convoy?</string>
    <string name="leave">Leave</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    <string name="start_convoy_message">You have successfully started a convoy</string>
    <string name="start_convoy_failed">Failed to start a convoy</string>
    <string name="convoy_id_tag">Convoy ID:\t</string>
    <string name="start">Start</string>
    <string name="convoy">Convoy</string>
    <string name="end">End</string>
    <string name="logout_end_convoy">Please end the active convoy before logging out</string>
    <string name="logout_leave_convoy">Please leave the active convoy before logging out</string>
    <string name="logout">Log Out</string>
    <string name="notification_title">Convoy</string>
    <string name="notification_message">Convoy Location Updater</string>
    <string name="ticker_text">Convoy is using Location Services to keep your map updated.</string>
    <string name="join_failed">Failed to join convoy</string>
    <string name="leave_failed">Failed to leave convoy</string>
    <string name="end_failed">Failed to end convoy</string>
</resources>